Use HttpURL.Path for Path.getRest()